biocomplexity/templates/flux-forecasting/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-forecasting-deployment
  namespace: biocomplexity
  labels:
    app: flux-forecasting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flux-forecasting
  template:
    metadata:
      labels:
        app: flux-forecasting
    spec:
      containers:
      - name: flux-forecasting-container
        image: ghcr.io/nssac/flux-forecasting:0.2.6
        ports:
        - containerPort: 8050
#        env:
#        - name:
#          value: ""
        resources:
          requests:
            memory: "2500Mi"
            cpu: "0.5"
          limits:
            memory: "3000Mi"
            cpu: "1"
