biocomplexity/templates/flux-forecasting/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/websocket-services: "flux-forecasting-service"
  name: flux-forecasting-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
  - host: flux-forecasting.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flux-forecasting-service
            port:
              number: 8080
